--- a/style/style.css
+++ b/style/style.css
@@ -71,6 +71,9 @@ main{
 }
 
 /* Home */
+#home{
+    margin-bottom: 50px;
+}
 
 .presentation{
     width: 50%;
@@ -107,7 +110,7 @@ h3,h5{
     justify-content: space-around;
 }
 
-#left{
+/* #left{
     position: relative;
     z-index: 0;
     left: 0;
@@ -125,6 +128,21 @@ h3,h5{
     color: #ebbc34;
     border: 0px;
     background-color: transparent;
+} */
+.dots{
+    background-color: #aaa;
+    border-radius: 10px;
+}
+.dots button{
+    border: 0 solid #fff;
+    background-color: #aaa;
+    border-radius: 10px;
+}
+.fa-circle{
+    color: #063460;
+}
+.active-dot{
+    color: #ebbc34;
 }
 
 .active{
