--- a/style/style.css
+++ b/style/style.css
@@ -130,12 +130,12 @@ h3,h5{
     background-color: transparent;
 } */
 .dots{
-    background-color: #aaa;
+    background-color: #ddd;
     border-radius: 10px;
 }
 .dots button{
     border: 0 solid #fff;
-    background-color: #aaa;
+    background-color: #ddd;
     border-radius: 10px;
 }
 .fa-circle{
@@ -206,6 +206,8 @@ h3,h5{
 }
 
 /* Cosa sono gli OpenBadge */
+
+
 
 .video-container {
     position: relative;
@@ -461,8 +463,28 @@ footer div p a:hover{
 #openBadge{
     background: rgb(26,115,141);
     background: linear-gradient(90deg, rgba(26,115,141,1) 35%, rgba(235,188,52,1) 65%);
-    max-height: 500px;
+    max-height: 700px;
 }
+.waves-up{
+    position: relative;
+    top: -1px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    transform: rotateX(180deg);
+    width: 100%;
+    height: 180px;
+}
+.waves-down{
+    position: relative;
+    bottom: 405px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    width: 100%;
+    height: 180px;
+}
+
 #openBadge::selection {
     background-color: #0077b5;
 }
@@ -470,6 +492,29 @@ footer div p a:hover{
 #validator{
     background: rgb(26,115,141);
     background: linear-gradient(90deg, rgba(26,115,141,1) 35%, rgba(235,188,52,1) 65%);
+    height: 700px;
+}
+.waves-u{
+    position: relative;
+    top: -1px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    transform: rotateX(180deg);
+    width: 100%;
+    height: 180px;
+}
+.waves-d{
+    position: relative;
+    bottom: 53px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    width: 100%;
+    height: 180px;
+}
+#contacts{
+    margin-top: 50px;
 }
 footer{
     background-color: #063460;
